# zero-shot-gateaway

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  consumer.py  export_gliner.py  inspect_model.py  inspection_output.txt  llms.txt  recent_logs.txt
.github/workflows/: ci.yml
scripts/: benchmark_ingest.py  benchmark_ocr.py  configure_gateway.py  consumer.py  export_gliner2_onnx.py  inspect_gliner2.py  inspect_pre_exported.py  simple_ocr.py  verify_extraction.py  verify_model.py  webhook_listener.py
src/: collider.rs  gliner.rs  main.rs  models.rs  ocr_pipeline.rs  schema_registry.rs  tui.rs
