[package]
name = "one_file_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.0", features = ["bundled"] }
parking_lot = "0.12" # Faster Mutexes
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = "0.7"
