[package]
name = "one_file_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.0", features = ["bundled", "vtab-arrow"] }
parking_lot = "0.12" # Faster Mutexes
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
htmlescape = "0.3"
dotenvy = "0.15"
ratatui = "0.29"
crossterm = "0.28"
syntect = "5.2"
